--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "services-provider",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://P921-del.github.io/services_provider",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -30,9 +35,13 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 10 chrome version",
+      "last 10 firefox version",
+      "last 10 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0",
+    "tailwindcss": "^3.4.14"
   }
 }
